@@ -1,3 +1,7 @@
+2024-07-17  hwpplayer1  <hwpplayer1@debian>
+
+	* c-basic/C.pdf: Global Değişkenlerin Faaliyet Alanı sayfa 26
+
 2024-07-16  hwpplayer1  <hwpplayer1@debian>
 
 	* c-basic/C.pdf: Yerel Değişkenlerin Faaliyet Alanları  sayfa 25 
